--- a/easyshop/WebContent/views/system/hot2.html
+++ b/easyshop/WebContent/views/system/hot2.html
@@ -128,7 +128,7 @@
                         $("#dg-product").datagrid("load", {
                             productId: hotCtrl.param.productId,
                             productName: hotCtrl.param.productName,
-                            productName: hotCtrl.param.status                               
+                            status: hotCtrl.param.status                               
                         });
                     }
                 },
