--- a/easyshop/WebContent/css/front/reset.css
+++ b/easyshop/WebContent/css/front/reset.css
@@ -22,6 +22,8 @@ a{text-decoration:none;-webkit-tap-highlight-color:rgba(255,0,0,0);outline:none;
 table{border-collapse: collapse;border-spacing: 0;}
 body,input{font-size: 14px;}
 
+.ms-controller,.ms-important,[ms-controller],[ms-important]{visibility: hidden;}
+
 body {
 	background-color: #f1f1f1;
 }
@@ -124,7 +126,7 @@ body {
 }
 .header .buy-info .shop-cart span {
     display: inline-block;
-    vertical-align: baseline;
+    vertical-align: middle;
     width: 25px;
     height: 20px;
     margin-left: 7px;
@@ -155,7 +157,6 @@ body {
     position: relative;
     height: 44px;
     background-color: #000;
-    overflow: hidden;
 }
 .nav li {
     float: left;
@@ -410,7 +411,7 @@ body {
     line-height: 20px;
     font-size: 12px;
     color: #666;
-    background-color: #fff;
+    background-color: #f1f1f1;
 }
 
 /* 数量增减 */
