--- a/easyshop/WebContent/css/front/pay.css
+++ b/easyshop/WebContent/css/front/pay.css
@@ -49,11 +49,16 @@ body {
     padding-top: 90px;
     background-color: #fff;
 }
-.qr-box img {
+.qr-box .qrcode-box {
     display: block;
     width: 250px;
     height: 250px;
     margin: 0 auto;
+}
+.qr-box .qrcode-box canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 .qr-box p {
     padding-top: 40px;
