--- a/easyshop/WebContent/css/front/personal-home.css
+++ b/easyshop/WebContent/css/front/personal-home.css
@@ -198,6 +198,11 @@
 	border: 1px solid #ddd;
 	margin-left: 28px;
 }
+.goods-box .item img {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
 .goods-box .item:first-child {
 	margin-left: 0;
 }
