--- a/easyshop/WebContent/template/header.html
+++ b/easyshop/WebContent/template/header.html
@@ -7,7 +7,7 @@
                 <span>/</span>
                 <a href="personal_home.html">个人中心</a>
                 <span>/</span>
-                <a href="help.html">帮助中心</a>
+                <a href="help-shopping.html">帮助中心</a>
             </div>
         </div>
     </div>
